FireAlarmApplication.Web/mtg_debug_20260127_151744.txt

=== MTG FIRE DEBUG ===
Time: 2026-01-27 15:17:44
NetCDF: C:\Users\kubil\AppData\Local\Temp\6fc95a9f-e650-4bd9-8d99-ceb733d15b41.nc

=== PYTHON STDERR (Debug Output) ===
  File "C:\Users\kubil\source\repos\FireAlarmApplication\FireAlarmApplication.Web\Scripts\parse_mtg_fire.py", line 32
    max_lat = float(parts[2])x""
                             ^
SyntaxError: invalid syntax


=== PYTHON STDOUT (JSON Output) ===


=== EXIT CODE ===
1
